# planning-fd_cedalion

./: .gitignore  CMakeLists.txt  manifest.xml  plan
src/: CMakeLists.txt  VERSION  plan  plan-ipc
src/preprocess/: preprocess
src/search/: Makefile  conditional_effect_incremental_lm_cut_heuristic.cc  conditional_effect_incremental_lm_cut_heuristic.h  conditional_effect_lm_cut_heuristic.cc  conditional_effect_lm_cut_heuristic.h  downward  downward-seq-opt-cedalion.py  downward-seq-sat-cedalion.py  eager_search.cc  eager_search.h  ff_heuristic.cc  globals.cc  heuristic.cc  heuristic.h  hm_heuristic.cc  hm_heuristic.h  incremental_lm_cut_heuristic.cc  incremental_lm_cut_heuristic.h  lm_cut_heuristic.cc  lm_cut_heuristic.h  memory_tracking_allocator.cc  memory_tracking_allocator.h  option_parser.h  planner.cc  requirements.py  search_node_info.h  search_progress.cc  search_space.cc  search_space.h  yahsp2.cc  yahsp2.h
src/search/landmarks/: landmark_cost_assignment.cc  landmark_cost_assignment.h  landmark_factory_zhu_givan.h
src/search/merge_and_shrink/: abstraction.cc  abstraction.h  merge_and_shrink_heuristic.cc
src/search/pdbs/: pattern_generation_haslum.cc  pattern_generation_haslum.h
src/search/por/: expansion_core.cc  expansion_core.h  por_method.cc  por_method.h  simple_stubborn_sets.cc  simple_stubborn_sets.h  sss_expansion_core.cc  sss_expansion_core.h
src/translate/: sas_tasks.py  translate.py
